<resources>
    <string name="app_name" translatable="false">SuperHero</string>
    <string name="description_of_image_of_super_hero" translatable="false">Image Of Super Hero</string>
    <string name="nameTitle" translatable="false">Name :</string>
    <string name="full_nameTitle" translatable="false">Full Name :</string>
    <string name="aliasTitle" translatable="false">Alias :</string>
    <string name="Alignment">Alignment :</string>
    <string name="heroImageDescription" translatable="false">heroImage</string>
    <string name="alignment">Alignment :</string>
    <string name="full_name">Full Name :</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="intelligence">Intelligence :</string>
    <string name="strength">Strength :</string>
    <string name="speed">Speed :</string>
    <string name="durability">Durability :</string>
    <string name="power">Power :</string>
    <string name="combat">Combat :</string>
    <string name="gender">Gender :</string>
    <string name="race">Race :</string>
    <string name="height">Height :</string>
    <string name="weight">Weight :</string>
    <string name="eye">Eye-color :</string>
    <string name="hair">Hair-color :</string>
    <string name="alias">Aliases :</string>
    <string name="placeBirth">Place of birth :</string>
    <string name="firstApp">First Appearance :</string>
    <string name="publisher">Publisher :</string>
    <string name="align">Alignment :</string>
    <string name="occupation">Occupation :</string>
    <string name="base">Base :</string>
    <string name="group">Group affiliation :</string>
    <string name="relatives" translatable="false">Relatives :</string>
    <string name="search">Search Your SuperHero</string>
    <string name="fab" translatable="false">fab</string>
    <string name="trySearch">No results…</string>
</resources>